# vybesc

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  TESTING.md  regenerate
.github/workflows/: pluginbuild.yml
cmake_modules/: SuperColliderServerPlugin.cmake
plugins/VybeSC/: VybeSC.cpp  VybeSC.hpp  VybeSC.sc  VybeSC.schelp  VybeSC_dltest_shim.h  jshm.hpp
scripts/: build_vybesc.sh  run_tests.sh
tests/: CMakeLists.txt  README.md  test_dlopen.cpp  vybesc_dltest_shim_test.cpp
